可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -36,7 +36,6 @@
 \section{Virtualbox 虚拟机}%
 \label{sec:vbox}
 
-
 \subsection{参考资料}%
 \label{sub:vbox-refs}
 
@@ -53,7 +52,6 @@ Virtualbox 虚拟机软件参考资料网址：
             \item \href{https://www.jianshu.com/p/bfb4f4415411}
                 {安装 virtualbox 教程}
                 \footnote{本教程使用的虚拟机版本是 6.0.14}
-                % \footnote{本教程作者已经感谢该文作者。}
         \end{itemize}
 \end{itemize}
 
@@ -358,7 +356,7 @@ MAILTO=""
 \end{enumerate}
 
 \subsubsection{在主机上设置与虚拟机的目录共享}%
-\label{ssub:vitualbox-shared-folder}
+\label{ssub:vbox-shared-folder}
 \begin{enumerate}
     \item \lstinline{sudo usermod -a -G vboxsf ganx}
     \item 参考 \ref{ssub:vbox-tip-share-folder},
@@ -565,7 +563,7 @@ endif
 \begin{itemize}
     \item 官方网址： \href{https://www.ctan.org/}{https://www.ctan.org/}
     \item 问答网站：
-        \href{https://wenda.latexstudio.net/}{https://wenda.latexstudio.net/} 
+        \href{https://wenda.latexstudio.net/}{https://wenda.latexstudio.net/}
         ~
         \href{https://tex.stackexchange.com/}{https://tex.stackexchange.com/}
     \item 软件下载：如果官方网址下载 \lstinline{texlive.iso} 慢的话，可以在
