可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -140,8 +140,6 @@ Virtualbox 虚拟机的安装分为三个步骤：
         安装 \lstinline{Guest additions}.
 \end{enumerate}
 
-
-
 \subsection{常用操作}%
 \label{sub:vbox-tips}
 
@@ -191,6 +189,7 @@ Virtualbox 虚拟机的安装分为三个步骤：
     \item 用鼠标拖动窗口，调节窗口大小。
 \end{enumerate}
 
+\newpage
 \section{Linux 系统}%
 \label{sec:linux-tips}
 
@@ -415,6 +414,7 @@ mv github_yourname_ganx.pub github_ddpom_ganx.pub
 \end{lstlisting}
 \end{enumerate}
 
+\newpage
 \section{Vim 编辑器}%
 \label{sec:vim}
 
@@ -652,6 +652,8 @@ endif
                 {Github 帮助}
         \end{itemize}
 \end{itemize}
+
+\newpage
 \section{常用配置}%
 \label{sec:git-settings}
 
@@ -727,6 +729,7 @@ gvim ~/.gitconfig_local
 %
 %待续
 %
+\newpage
 \section{常用操作}%
 \label{sec:git-tips}
 %
@@ -738,6 +741,7 @@ gvim ~/.gitconfig_local
 \section{Zotero 文献管理}%
 \label{sec:citation-zotero}
 
+\newpage
 \section{Ludwig 英文语句搜索引擎}%
 \label{sec:writing-ludwig}
 
