虚拟机：将设定共享目录的示意图移到附录。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -146,36 +146,6 @@ Virtualbox 虚拟机的安装分为三个步骤：
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-tip-share-folder}
 
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
-  2019-11-29 17-52-45.png}
-  \caption{设定共享目录 --- 示意图 1}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
-  2019-11-29 17-53-28.png}
-  \caption{设定共享目录 --- 示意图 2}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
-  2019-11-29 17-54-41.png}
-  \caption{设定共享目录 --- 示意图 3}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
-  2019-11-29 17-55-59.png}
-  \caption{设定共享目录 --- 示意图 4}
-\end{figure}
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
-  2019-11-29 17-59-22.png}
-  \caption{设定共享目录 --- 示意图 5}
-\end{figure}
 
 \subsubsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-tip-window-size}
@@ -838,6 +808,45 @@ SIMILAR.
 
 %\bibliography{reference}
 
-%\appendix
+\appendix
+
+\chapter{系统设置}%
+\label{cha:settings-system-a}
+
+\section{Virtualbox 虚拟机}
+
+\subsection{设定共享目录的图示}%
+\label{ssub:vbox-tip-share-folder-a}
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
+  2019-11-29 17-52-45.png}
+  \caption{设定共享目录 --- 示意图 1}
+\end{figure}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
+  2019-11-29 17-53-28.png}
+  \caption{设定共享目录 --- 示意图 2}
+\end{figure}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
+  2019-11-29 17-54-41.png}
+  \caption{设定共享目录 --- 示意图 3}
+\end{figure}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
+  2019-11-29 17-55-59.png}
+  \caption{设定共享目录 --- 示意图 4}
+\end{figure}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{screenshots/Screenshot from
+  2019-11-29 17-59-22.png}
+  \caption{设定共享目录 --- 示意图 5}
+\end{figure}
 
 \end{document}
