增加对设定共享目录的描述。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -146,6 +146,8 @@ Virtualbox 虚拟机的安装分为三个步骤：
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-tip-share-folder}
 
+当虚拟机需要与主机系统交换文件时，就可以设定共享目录。
+共享目录的设定详情参见附录 \ref{ssub:vbox-tip-share-folder-a}.
 
 \subsubsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-tip-window-size}
