可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -163,7 +163,7 @@ Virtualbox 虚拟机的安装分为三个步骤：
 
 \newpage
 \section{Linux 系统}%
-\label{sec:linux-tips}
+\label{sec:linux}
 
 \subsection{参考资料}%
 \label{sub:linux-refs}
@@ -802,7 +802,10 @@ SIMILAR.
 
 \section{Virtualbox 虚拟机}
 
-\subsection{设定共享目录的图示}%
+\subsection{图解操作}%
+\label{sub:vbox-graphic-illustration}
+
+\subsubsection{设定共享目录的图示}%
 \label{ssub:vbox-tip-share-folder-a}
 
 \begin{figure}[!htbp]
@@ -835,6 +838,9 @@ SIMILAR.
   2019-11-29 17-59-22.png}
   \caption{设定共享目录 --- 示意图 5}
 \end{figure}
+
+\section{Linux 系统}%
+\label{sec:linux-a}
 
 \section{Virtualbox 虚拟机}%
 \label{sec:vbox-a}
