cls: 把详细的选项用可读性强的方式列出来。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -1,7 +1,15 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-\documentclass[cn,11pt, simple]{elegantbook}
+\documentclass[
+    11pt,
+    cite=authoryear,
+    device=normal,
+    lang=cn,
+    mode=simple,
+    result=answer,
+    toc=onecol,
+]{elegantbook_sierxue}
 
 \title{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
 \subtitle{科学研究中常用开源工具的简单介绍}
