--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -73,38 +73,49 @@ Virtualbox 虚拟机软件参考资料网址：
 \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/LATEST.TXT}
 {Virtualbox清华镜像最新版本}，可以查到当前最新版本。
 写作这个教程的时候，版本是 6.1.0.
-Virtualbox 虚拟机的安装分为三个步骤：
+Virtualbox 虚拟机的安装分为两个步骤：
 \begin{enumerate}
-    \item 安装基本软件；
-    \item 安装 \lstinline{Extension pack};
-    \item 安装 \lstinline{Guest additions}.
-\end{enumerate}
-\subsubsection{Linux 系统}%
-\label{ssub:vbox-install-linux}
-
-安装分为三步：
-\begin{enumerate}
-    \item Linux 的所有发行版可以参考
-        \href{https://www.virtualbox.org/wiki/Linux_Downloads}{官方安装文档}，
-        Debian 系列的发行版可以按下面两种方法安装：
+    \item 在主机（host computer）上安装基本软件；
         \begin{itemize}
-            \item 在
-                \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}
-                {清华镜像}
-                下载相应的 \lstinline{deb} 安装包安装。
-            \item 参考
-                \href{https://www.virtualbox.org/wiki/Linux_Downloads}
-                {官方安装文档}
-                添加源，用 \lstinline{apt} 方式安装。
-                \textbf{温馨提示}：当版本跳跃时，比如从 6.0 升级到 6.1,
-                \lstinline{sudo apt update} 并不提醒升级，需要运行命令
-                \lstinline{sudo apt install virtualbox-6.1}.
+            \item \textbf{Windows}: 下载
+                \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/virtualbox-Win-latest.exe}
+                {最新 Virtualbox 基本软件}，按常规安装。
+            \item \textbf{Mac}: 下载
+                \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/virtualbox-osx-latest.dmg}
+                {最新 Virtualbox 基本软件}，按常规安装。
+            \item Linux 的所有发行版可以参考
+                \href{https://www.virtualbox.org/wiki/Linux_Downloads}{官方安装文档}，
+                Debian 系列的发行版可以按下面两种方法安装：
+                \begin{itemize}
+                    \item 在
+                        \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}
+                        {清华镜像}
+                        下载相应的 \lstinline{deb} 安装包安装。
+                    \item 参考
+                        \href{https://www.virtualbox.org/wiki/Linux_Downloads}
+                        {官方安装文档}
+                        添加源，用 \lstinline{apt} 方式安装。
+                        \begin{note}\label{note:vbox-apt-upgrade}
+                           当版本跳跃时，比如从 6.0 升级到 6.1,
+                           \lstinline{sudo apt update}
+                           并不提醒升级，需要运行命令
+                           \lstinline{sudo apt install virtualbox-6.1}.
+                        \end{note}
+                \end{itemize}
         \end{itemize}
-    \item 双击安装
-        \lstinline{Oracle_VM_VirtualBox_Extension_Pack-6.1.0.vbox-extpack};
-    \item 参考
-        \href{https://www.virtualbox.org/manual/UserManual.html#additions-linux}{官方使用手册}
-        安装 \lstinline{Guest additions}.
+    \item 在主机（host computer）上安装 \lstinline{Extension pack}.
+        此步中的 \lstinline{Extension pack} 软件对 Windows, Mac, Linux
+        等都通用。
+        点击
+        \href{https://mirror.tuna.tsinghua.edu.cn/virtualbox/}{清华镜像}，
+        选择最新的版本号，
+        假设最新的版本为 6.1.0，
+        则找到并下载
+        \begin{center}\label{}
+            \lstinline{Oracle_VM_VirtualBox_Extension_Pack-6.1.0.vbox-extpack},
+        \end{center}
+        双击后，按提示安装。
+    % \item 在虚拟机（guest computer）上安装 \lstinline{Guest additions}.
 \end{enumerate}
 % \begin{tip}\label{note:vbox-download-extpack}
 %     安装第二步中的 \lstinline{Extension pack} 软件对 Windows, Mac, Linux
