虚拟机使用的引言

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -191,8 +191,14 @@ Virtualbox 虚拟机的安装分为两个步骤：
 %     %     安装 \lstinline{Guest additions}.
 % \end{enumerate}
 
-\subsection{常用操作}%
-\label{sub:vbox-tips}
+\subsection{使用虚拟机}%
+\label{sub:vbox-vm}
+
+按照 \ref{sub:vbox-install} 完成安装后，就可以制作虚拟机 (guest
+machine) 了。
+虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
+为配合本教程，我们精心制作了 Ubuntu 18.04 虚拟机，
+可以让读者快速地学习常用的开源工具，而不用花费大量时间于软件的安装和配置。
 
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-tip-share-folder}
