--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -199,6 +199,14 @@ machine) 了。
 虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
 为配合本教程，我们精心制作了 Ubuntu 18.04 虚拟机，
 可以让读者快速地学习常用的开源工具，而不用花费大量时间于软件的安装和配置。
+此虚拟机的安装和配置，请参见 \S\ref{sub:vbox-vm-install-set}.
+
+\subsubsection{获取虚拟机}%
+\label{ssub:vm-download}
+
+
+\subsubsection{内存分配}%
+\label{ssub:vbox-set-memory}
 
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-set-share-folder}
