vm: 设置虚拟机内存的两个原则。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -208,6 +208,12 @@ machine) 了。
 \subsubsection{内存分配}%
 \label{ssub:vbox-set-memory}
 
+在虚拟机的系统设置中，可以设置虚拟机所用内存大小。设置内存请遵循以下原则：
+\begin{enumerate}
+    \item 虚拟机的内存不能超过主机物理内存的一半；
+    \item ganx@vm 的内存最好不小于 2048 MB.
+\end{enumerate}
+
 \subsubsection{设定共享目录}%
 \label{ssub:vbox-set-share-folder}
 
