可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -199,9 +199,10 @@ machine) 了。
 虚拟机的一个优点是共享方便，团队成员使用同样的配置大大有利于团队协作。
 为配合本教程，我们精心制作了 Ubuntu 18.04 虚拟机，
 可以让读者快速地学习常用的开源工具，而不用花费大量时间于软件的安装和配置。
-此虚拟机的安装和配置，请参见 \S\ref{sub:vbox-vm-install-set}.
+我们命名此虚拟机为 ganx@vm, 其安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
 
-\subsubsection{获取虚拟机}%
+
+\subsubsection{获取虚拟机 ganx@vm}%
 \label{ssub:vm-download}
 
 
@@ -223,11 +224,11 @@ machine) 了。
 \subsubsection{调整虚拟机窗口大小}%
 \label{ssub:vbox-set-window-size}
 
-至少有三种方法：
+调整虚拟机窗口有多种方法，我们这里提供三种：
 \begin{enumerate}
     \item 最大化虚拟机窗口。（在 Linux 和 Windows 上通常为点击右上角的方框，
         在 Mac 上点击左上的放大键）
-    \item 按组合键 Host + H.（组合键在 Linux 和 Windows 上通常为右边的
+    \item 按组合键 Host + F.（组合键在 Linux 和 Windows 上通常为右边的
         Ctrl, 在 Mac 上通常为左边的 Command 键）
     \item 用鼠标拖动窗口，调节窗口大小。
 \end{enumerate}
