--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -365,26 +365,24 @@ git submodule update --remote
         %     这一步是更新 \lstinline{dotfiles-local} 时
         %     自动完成，虚拟机使用者不需要手动写入。
         % \end{note}
-    \item 运行命令 \lstinline{crontab -e}, 写入以下命令：
+    \item 运行命令 \lstinline{crontab -l}, 确认你看到以下内容：
 \begin{lstlisting}[escapeinside=``]
 SHELL=/usr/bin/zsh
 PATH=/sbin:/bin:/usr/sbin:/usr/bin
 MAILTO=""
 
-@hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh
-\end{lstlisting}
-写入命令后，可以运行 \lstinline{crontab -l}
-来确认你刚才输入的内容是正确的。
-\begin{share}\label{note:crontab}
-    我们可以把自动更新的运行记录写入 \lstinline{log} 文件。
-    首先，运行~ \lstinline{mkdir ~/.df/log} 创建 \lstinline{log} 目录；
-    然后运行命令 \lstinline{crontab -e}, 在最后一行添加
-    \lstinline{ >> ~/.df/log/pullDotfiles.log}:
-\begin{lstlisting}[escapeinside=``]
 @hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh >> ~/.df/log/pullDotfiles.log
 \end{lstlisting}
-添加以后不要断行，要确保所有的内容在一行上。
-\end{share}
+% \begin{share}\label{note:crontab}
+%     我们可以把自动更新的运行记录写入 \lstinline{log} 文件。
+%     首先，运行~ \lstinline{mkdir ~/.df/log} 创建 \lstinline{log} 目录；
+%     然后运行命令 \lstinline{crontab -e}, 在最后一行添加
+%     \lstinline{ >> ~/.df/log/pullDotfiles.log}:
+% \begin{lstlisting}[escapeinside=``]
+% @hourly  /usr/bin/zsh ~/.df/dotfiles-local/scripts/pullDotfiles.sh >> ~/.df/log/pullDotfiles.log
+% \end{lstlisting}
+% 添加以后不要断行，要确保所有的内容在一行上。
+% \end{share}
 \end{enumerate}
 
 % \subsubsection{常用命令}%
