package: 增加 float 以提高定位表格的能力。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -10,6 +10,7 @@
     result=answer,
     toc=onecol,
 ]{elegantbook_sierxue}
+\usepackage{float}
 
 \title{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
 \subtitle{科学研究中常用开源工具的简单介绍}
