可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -411,14 +411,24 @@ MAILTO=""
 % \end{lstlisting}
 % \end{enumerate}
 
-\subsection{本教程所用虚拟机的安装和设置}%
+\subsection{虚拟机 ganx@vm 的安装和设置}%
 \label{sub:vbox-vm-install-set}
 
-\subsubsection{虚拟机的基本安装}%
+\subsubsection{虚拟机基本信息}%
 \label{ssub:linux-ubuntu}
 
-本虚拟机的系统为 Ubuntu 18.04; 安装选项为最小安装；用户名: ganx; 密码: 9;
-登录方式：自动登录。
+\begin{table}[H]
+   \centering
+   % \caption{虚拟机 ganx@vm 的基本信息}
+     \begin{tabular}{lllll}
+     \toprule
+     系统 & 初始安装选项 & 用户名 & 密码 & 登录方式 \\
+     \midrule
+     Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
+     \bottomrule
+     \end{tabular}%
+   \label{tab:theorem-class}%
+ \end{table}%
 
 \subsubsection{安装虚拟机的 Guest Additions}%
 \label{ssub:vbox-guest-additions}
