可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -203,7 +203,7 @@ machine) 了。
 我们命名此虚拟机为 ganx@vm, 其安装和配置参见 \S\ref{sub:vbox-vm-install-set}.
 
 
-\subsubsection{获取虚拟机 ganx@vm}%
+\subsubsection{获取虚拟机}%
 \label{ssub:vm-download}
 
 
@@ -411,7 +411,7 @@ MAILTO=""
 % \end{lstlisting}
 % \end{enumerate}
 
-\subsection{虚拟机 ganx@vm 的安装和设置}%
+\subsection{虚拟机的安装和设置}%
 \label{sub:vbox-vm-install-set}
 
 \subsubsection{虚拟机基本信息}%
@@ -420,11 +420,11 @@ MAILTO=""
 \begin{table}[H]
    \centering
    % \caption{虚拟机 ganx@vm 的基本信息}
-     \begin{tabular}{lllll}
+     \begin{tabular}{llllll}
      \toprule
-     系统 & 初始安装选项 & 用户名 & 密码 & 登录方式 \\
+     名字 & 系统 & 初始安装 & 用户名 & 密码 & 登录方式 \\
      \midrule
-     Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
+     ganx@vm & Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
      \bottomrule
      \end{tabular}%
    \label{tab:theorem-class}%
