--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -4,7 +4,7 @@
 \documentclass[
     11pt,
     cite=authoryear,
-    device=normal,
+    device=phone,
     lang=cn,
     mode=simple,
     result=answer,
