--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -16,7 +16,7 @@
 \subtitle{科学研究中常用开源工具的简单介绍}
 
 \author{甘湘华}
-\institute{西南财经大学}
+\institute{西南财经大学} % Commented out in the cls file.
 \date{\today}
 \version{0.01}
 
