cover time: 修改时间为中文显示模式。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -17,7 +17,7 @@
 
 \author{甘湘华}
 \institute{西南财经大学} % Commented out in the cls file.
-\date{\today}
+\date{\zhtoday}
 \version{0.01}
 
 \extrainfo{本教程基于已经配置好的虚拟机，介绍科学研究中常用开源工具。
