--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -12,8 +12,8 @@
 ]{elegantbook_sierxue}
 \usepackage{float}
 
-\title{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
-\subtitle{科学研究中常用开源工具的简单介绍}
+\title{开源工具快速上手指南}
+\subtitle{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
 
 \author{甘湘华}
 \institute{西南财经大学} % Commented out in the cls file.
