可以忽略的微小更新

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -4,7 +4,7 @@
 \documentclass[
     11pt,
     cite=authoryear,
-    device=phone,
+    device=normal,
     lang=cn,
     mode=simple,
     result=answer,
@@ -422,9 +422,9 @@ MAILTO=""
    % \caption{虚拟机 ganx@vm 的基本信息}
      \begin{tabular}{llllll}
      \toprule
-     名字 & 系统 & 初始安装 & 用户名 & 密码 & 登录方式 \\
+     系统 & 初始安装 & 用户名 & 密码 & 登录方式 \\
      \midrule
-     ganx@vm & Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
+     Ubuntu 18.04 & 最小安装 & ganx   & 9 & 自动登录\\
      \bottomrule
      \end{tabular}%
    \label{tab:theorem-class}%
